--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   </div>
 
-
+  <!-- Home banner -->
   <div class="container-fluid background-img mt-0 pt-0 text-center">
 
     <!-- NAVBAR -->
@@ -94,7 +94,262 @@
 
   </div>
 
+  <!-- popular items -->
+  <div class="container">
+    <div class="title pt-5">
+      <h1>Popular Brands</h1>
+    </div>
+
+    <div class="col-lg-6 ">
+      <ul class="list-group list-group-horizontal-md pb-2 pt-3 list-unstyled">
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- most popular -->
+  <div class="container">
+    <div class="title pt-5">
+      <h1>Most Popular</h1>
+    </div>
+
+    <div class="col-lg-6 ">
+      <ul class="list-group list-group-horizontal-md pb-2 pt-3 list-unstyled">
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- new lowest ask -->
+  <div class="container">
+    <div class="title pt-5">
+      <h1>New Lowest Asks</h1>
+    </div>
+
+    <div class="col-lg-6 ">
+      <ul class="list-group list-group-horizontal-md pb-2 pt-3 list-unstyled">
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- new high bids -->
+  <div class="container">
+    <div class="title pt-5">
+      <h1>New Highest Bids</h1>
+    </div>
+
+    <div class="col-lg-6 ">
+      <ul class="list-group list-group-horizontal-md pb-2 pt-3 list-unstyled">
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+        <li class="pl-4">
+          <div class="card" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <br></br>
+
+  
   <!-- FOOTER -->
+  <footer class="page-footer font-small bg-dark text-white">
+
+  <!-- Footer Links -->
+  <div class="container text-center text-md-left">
+
+    <!-- Grid row -->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mx-auto">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Very long link 1</a>
+          </li>
+          <li>
+            <a href="#!">Very long link 2</a>
+          </li>
+          <li>
+            <a href="#!">Very long link 3</a>
+          </li>
+          <li>
+            <a href="#!">Very long link 4</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mx-auto">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Link 1</a>
+          </li>
+          <li>
+            <a href="#!">Link 2</a>
+          </li>
+          <li>
+            <a href="#!">Link 3</a>
+          </li>
+          <li>
+            <a href="#!">Link 4</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mx-auto">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Link 1</a>
+          </li>
+          <li>
+            <a href="#!">Link 2</a>
+          </li>
+          <li>
+            <a href="#!">Link 3</a>
+          </li>
+          <li>
+            <a href="#!">Link 4</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-3 mx-auto">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#!">Link 1</a>
+          </li>
+          <li>
+            <a href="#!">Link 2</a>
+          </li>
+          <li>
+            <a href="#!">Link 3</a>
+          </li>
+          <li>
+            <a href="#!">Link 4</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2018 Copyright:
+    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+
 
 </body>
 </html>
