removed custom css

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <span class="btn btn-flat learn-more-btn bg-white text-dark p-1 m-1">See How it Works</span>
     </h5>
 
-    <a class="close-button mr-2">X</a>
+    <a class="mt-negative-40 mr-2 float-right">X</a>
 
   </div>
 
@@ -32,7 +32,7 @@
 
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent ">
-      <a class="navbar-brand" href="#"><img src="https://stockx-assets.imgix.net/logo/stockx-homepage-logo-light.svg?auto=compress,format" width="100px" height="100px" alt=""></a>
+      <a class="navbar-brand" href="#"><img src="https://stockx-assets.imgix.net/logo/stockx-homepage-logo-light.svg?auto=compress,format" width="150px" height="150px" alt=""></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -50,16 +50,22 @@
           <li class="nav-item">
             <a class="nav-link disabled  text-white" href="#">Disabled</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link  text-white" href="#">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link  text-white" href="#">Contact</a>
+          </li>
         </ul>
       </div>
     </nav>
 
-    <div class="little text-white text-center">
-      <h1>< The Stock Market of Things ></h1>
+    <div class="text-white text-center">
+      <p class="h2"> The Stock Market of Things </p>
     </div>
 
     <div class="big text-center">
-      <h1>Buy and Sell Authentic sneakers</h1>
+      <p class="display-3 text-light">Buy and Sell Authentic sneakers</p>
     </div>
 
     <!-- Search form -->
@@ -81,15 +87,17 @@
 
     <div class="container">
       <div class="col-lg-6 offset-2">
-        <ul class="list-group list-group-horizontal-md ml-5">
-        <li class="list-group-item">SNEAKERS</li>
-        <li class="list-group-item">STREETWEAR</li>
-        <li class="list-group-item">COLLECTABLES</li>
-        <li class="list-group-item">HANDBAGS</li>
-        <li class="list-group-item">WATCHES</li>
+        <ul class="list-group list-group-horizontal-md">
+        <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">SNEAKERS</a></li>
+        <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">STREETWEAR</a></li>
+        <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">COLLECTABLES</a></li>
+        <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">HANDBAGS</a></li>
+        <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">WATCHES</a></li>
       </ul>
       </div>
     </div>
+
+
   </div>
 
   </div>
@@ -224,7 +232,7 @@
 
   <br></br>
 
-  
+
   <!-- FOOTER -->
   <footer class="page-footer font-small bg-dark text-white">
 
