--- a/index.html
+++ b/index.html
@@ -17,19 +17,16 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
+  <!-- top banner  -->
   <div class="spacer text-center mb-0 pt-0">
     <h5 class="title text-white">New to StockX?
       <span class="btn btn-flat learn-more-btn bg-white text-dark p-1 m-1">See How it Works</span>
     </h5>
-
     <a class="mt-negative-40 mr-2 float-right">X</a>
-
   </div>
 
   <!-- Home banner -->
-  <div class="container-fluid background-img mt-0 pt-0 text-center">
-
+  <div class="container-fluid text-center background-img mt-0 pt-0">
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent ">
       <a class="navbar-brand" href="#"><img src="https://stockx-assets.imgix.net/logo/stockx-homepage-logo-light.svg?auto=compress,format" width="150px" height="150px" alt=""></a>
@@ -60,45 +57,45 @@
       </div>
     </nav>
 
+    <!-- banner text -->
     <div class="text-white text-center">
       <p class="h2"> The Stock Market of Things </p>
     </div>
-
     <div class="big text-center">
       <p class="display-3 text-light">Buy and Sell Authentic sneakers</p>
     </div>
 
     <!-- Search form -->
-    <div class="container mt-5">
-    <div class="col-lg-8 offset-2">
-      <form action="">
-        <div class="p-1 bg-light rounded rounded-pill shadow-sm mb-4">
-          <div class="input-group">
-            <input type="search" placeholder="What're you searching for?" aria-describedby="button-addon1" class="form-control border-0 bg-light">
-            <div class="input-group-append">
-              <button id="button-addon1" type="submit" class="btn btn-link text-primary text-white green"><i class="fa fa-search"></i>BROWSE ALL</button>
+    <div class="container mt-5 text-center">
+      <div class="col-lg-12 offset">
+        <form action="">
+          <div class="p-1 bg-light rounded rounded-pill shadow-sm mb-4 p-3">
+            <div class="input-group bg-transparent">
+              <input type="search" placeholder="What're you searching for?" aria-describedby="button-addon1" class="form-control border-0 bg-light">
+              <div class="input-group-append">
+                <button id="button-addon1" type="submit" class="btn btn-link text-primary text-white green"><i class="fa fa-search"></i>BROWSE ALL</button>
+              </div>
             </div>
           </div>
-        </div>
-      </form>
-    </div>
-
-
-
-    <div class="container">
-      <div class="col-lg-6 offset-2">
-        <ul class="list-group list-group-horizontal-md">
-        <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">SNEAKERS</a></li>
-        <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">STREETWEAR</a></li>
-        <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">COLLECTABLES</a></li>
-        <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">HANDBAGS</a></li>
-        <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">WATCHES</a></li>
-      </ul>
+        </form>
       </div>
+
+      <!-- Search menu -->
+      <div class="container-fluid">
+        <div class="col-10 offset-1 text-center">
+          <ul class="list-group list-group-horizontal-md">
+            <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">SNEAKERS</a></li>
+            <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">STREETWEAR</a></li>
+            <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">COLLECTABLES</a></li>
+            <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">HANDBAGS</a></li>
+            <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">WATCHES</a></li>
+            <li class="list-group-item bg-transparent text-light"><a href="#" class="btn text-light">GLASSES</a></li>
+          </ul>
+        </div>
+      </div>
+
+
     </div>
-
-
-  </div>
 
   </div>
 
@@ -108,25 +105,25 @@
       <h1>Popular Brands</h1>
     </div>
 
-    <div class="col-lg-6 ">
+    <div class="col-lg-6">
       <ul class="list-group list-group-horizontal-md pb-2 pt-3 list-unstyled">
-        <li class="pl-4">
-          <div class="card" style="width: 15rem;">
+        <li class="m-1">
+          <div class="card" style="width: 16rem;">
             <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
           </div>
         </li>
-        <li class="pl-4">
-          <div class="card" style="width: 15rem;">
+        <li class="m-1">
+          <div class="card" style="width: 16rem;">
             <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
           </div>
         </li>
-        <li class="pl-4">
-          <div class="card" style="width: 15rem;">
+        <li class="m-1">
+          <div class="card" style="width: 16rem;">
             <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
           </div>
         </li>
-        <li class="pl-4">
-          <div class="card" style="width: 15rem;">
+        <li class="m-1">
+          <div class="card" style="width: 16rem;">
             <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
           </div>
         </li>
@@ -236,127 +233,127 @@
   <!-- FOOTER -->
   <footer class="page-footer font-small bg-dark text-white">
 
-  <!-- Footer Links -->
-  <div class="container text-center text-md-left">
+    <!-- Footer Links -->
+    <div class="container text-center text-md-left">
 
-    <!-- Grid row -->
-    <div class="row">
+      <!-- Grid row -->
+      <div class="row">
 
-      <!-- Grid column -->
-      <div class="col-md-3 mx-auto">
+        <!-- Grid column -->
+        <div class="col-md-3 mx-auto">
 
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+          <!-- Links -->
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
 
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Very long link 1</a>
-          </li>
-          <li>
-            <a href="#!">Very long link 2</a>
-          </li>
-          <li>
-            <a href="#!">Very long link 3</a>
-          </li>
-          <li>
-            <a href="#!">Very long link 4</a>
-          </li>
-        </ul>
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Very long link 1</a>
+            </li>
+            <li>
+              <a href="#!">Very long link 2</a>
+            </li>
+            <li>
+              <a href="#!">Very long link 3</a>
+            </li>
+            <li>
+              <a href="#!">Very long link 4</a>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none">
+
+        <!-- Grid column -->
+        <div class="col-md-3 mx-auto">
+
+          <!-- Links -->
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Link 1</a>
+            </li>
+            <li>
+              <a href="#!">Link 2</a>
+            </li>
+            <li>
+              <a href="#!">Link 3</a>
+            </li>
+            <li>
+              <a href="#!">Link 4</a>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none">
+
+        <!-- Grid column -->
+        <div class="col-md-3 mx-auto">
+
+          <!-- Links -->
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Link 1</a>
+            </li>
+            <li>
+              <a href="#!">Link 2</a>
+            </li>
+            <li>
+              <a href="#!">Link 3</a>
+            </li>
+            <li>
+              <a href="#!">Link 4</a>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
+
+        <hr class="clearfix w-100 d-md-none">
+
+        <!-- Grid column -->
+        <div class="col-md-3 mx-auto">
+
+          <!-- Links -->
+          <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
+
+          <ul class="list-unstyled">
+            <li>
+              <a href="#!">Link 1</a>
+            </li>
+            <li>
+              <a href="#!">Link 2</a>
+            </li>
+            <li>
+              <a href="#!">Link 3</a>
+            </li>
+            <li>
+              <a href="#!">Link 4</a>
+            </li>
+          </ul>
+
+        </div>
+        <!-- Grid column -->
 
       </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-3 mx-auto">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Link 1</a>
-          </li>
-          <li>
-            <a href="#!">Link 2</a>
-          </li>
-          <li>
-            <a href="#!">Link 3</a>
-          </li>
-          <li>
-            <a href="#!">Link 4</a>
-          </li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-3 mx-auto">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Link 1</a>
-          </li>
-          <li>
-            <a href="#!">Link 2</a>
-          </li>
-          <li>
-            <a href="#!">Link 3</a>
-          </li>
-          <li>
-            <a href="#!">Link 4</a>
-          </li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-3 mx-auto">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#!">Link 1</a>
-          </li>
-          <li>
-            <a href="#!">Link 2</a>
-          </li>
-          <li>
-            <a href="#!">Link 3</a>
-          </li>
-          <li>
-            <a href="#!">Link 4</a>
-          </li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
+      <!-- Grid row -->
 
     </div>
-    <!-- Grid row -->
+    <!-- Footer Links -->
 
-  </div>
-  <!-- Footer Links -->
+    <!-- Copyright -->
+    <div class="footer-copyright text-center py-3">© 2018 Copyright:
+      <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+    </div>
+    <!-- Copyright -->
 
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© 2018 Copyright:
-    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
-  </div>
-  <!-- Copyright -->
-
-</footer>
+  </footer>
 
 
 </body>
