--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
   <!-- FONT AWSOME -->
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -93,10 +97,30 @@
           </ul>
         </div>
       </div>
-
-
     </div>
+  </div>
 
+  <!-- Image carousel -->
+  <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+      <div class="carousel-item active">
+        <img class="d-block w-100" src="https://stockx-assets.imgix.net/CSAssets/banner/1USSNEAKERSToppsIPO/ToppsIPO-Internal_Banners-hexf7f7f7-WebBanner.jpg?auto=compress,format" alt="First slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://stockx-assets.imgix.net/CSAssets/banner/2USSNEAKERSYeezy700TealBlue/Yeezy_700_Teal_Blue_Internal_Banners_e7e7f1_WebBanner.jpg?auto=compress,format" alt="Second slide">
+      </div>
+      <div class="carousel-item">
+        <img class="d-block w-100" src="https://stockx-assets.imgix.net/CSAssets/banner/3SNPHST/WebBanner.png?auto=compress,format" alt="Third slide">
+      </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+      <span class="sr-only">Next</span>
+    </a>
   </div>
 
   <!-- popular items -->
@@ -140,23 +164,47 @@
     <div class="col-lg-6 ">
       <ul class="list-group list-group-horizontal-md pb-2 pt-3 list-unstyled">
         <li class="pl-4">
-          <div class="card" style="width: 15rem;">
-            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          <div class="card border-0" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx.imgix.net/Air-Jordan-1-Retro-High-Shattered-Backboard-3-GS-Product.jpg?fit=fill&bg=FFFFFF&w=300&h=214&auto=format,compress&trim=color&q=90&dpr=2&updated_at=1572287923'>
+            <div class="card-body text-body" style="background-color:#f6f6f6">
+              <h5 class="card-title">CJordan 1 Retro High Shattered Backboard 3.0</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Lowest ask</h6>
+              <h5 class="card-title">$198</h5>
+              <p class="card-text">2679 sold</p>
+            </div>
           </div>
         </li>
         <li class="pl-4">
-          <div class="card" style="width: 15rem;">
-            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          <div class="card border-0" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx.imgix.net/Air-Jordan-1-Retro-High-Shattered-Backboard-3-GS-Product.jpg?fit=fill&bg=FFFFFF&w=300&h=214&auto=format,compress&trim=color&q=90&dpr=2&updated_at=1572287923'>
+            <div class="card-body text-body" style="background-color:#f6f6f6">
+              <h5 class="card-title">CJordan 1 Retro High Shattered Backboard 3.0</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Lowest ask</h6>
+              <h5 class="card-title">$198</h5>
+              <p class="card-text">2679 sold</p>
+            </div>
           </div>
         </li>
         <li class="pl-4">
-          <div class="card" style="width: 15rem;">
-            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          <div class="card border-0" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx.imgix.net/Air-Jordan-1-Retro-High-Shattered-Backboard-3-GS-Product.jpg?fit=fill&bg=FFFFFF&w=300&h=214&auto=format,compress&trim=color&q=90&dpr=2&updated_at=1572287923'>
+            <div class="card-body text-body" style="background-color:#f6f6f6">
+              <h5 class="card-title">CJordan 1 Retro High Shattered Backboard 3.0</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Lowest ask</h6>
+              <h5 class="card-title">$198</h5>
+              <p class="card-text">2679 sold</p>
+            </div>
           </div>
         </li>
         <li class="pl-4">
-          <div class="card" style="width: 15rem;">
-            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          <div class="card border-0" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx.imgix.net/Air-Jordan-1-Retro-High-Shattered-Backboard-3-GS-Product.jpg?fit=fill&bg=FFFFFF&w=300&h=214&auto=format,compress&trim=color&q=90&dpr=2&updated_at=1572287923'>
+            <div class="card-body text-body" style="background-color:#f6f6f6">
+              <h5 class="card-title">CJordan 1 Retro High Shattered Backboard 3.0</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Lowest ask</h6>
+              <h5 class="card-title">$198</h5>
+              <p class="card-text">2679 sold</p>
+            </div>
           </div>
         </li>
       </ul>
@@ -172,23 +220,47 @@
     <div class="col-lg-6 ">
       <ul class="list-group list-group-horizontal-md pb-2 pt-3 list-unstyled">
         <li class="pl-4">
-          <div class="card" style="width: 15rem;">
-            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          <div class="card border-0" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx.imgix.net/Nike-Air-Max-98-Olivia-Kim-No-Cover-W.png?fit=fill&bg=FFFFFF&w=300&h=214&auto=format,compress&trim=color&q=90&dpr=2&updated_at=1572367909'>
+            <div class="card-body text-body" style="background-color:#f6f6f6">
+              <h5 class="card-title">CJordan 1 Retro High Shattered Backboard 3.0</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Lowest ask</h6>
+              <h5 class="card-title">$198</h5>
+              <p class="card-text">2679 sold</p>
+            </div>
           </div>
         </li>
         <li class="pl-4">
-          <div class="card" style="width: 15rem;">
-            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          <div class="card border-0" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx.imgix.net/Nike-Air-Max-98-Olivia-Kim-No-Cover-W.png?fit=fill&bg=FFFFFF&w=300&h=214&auto=format,compress&trim=color&q=90&dpr=2&updated_at=1572367909'>
+            <div class="card-body text-body" style="background-color:#f6f6f6">
+              <h5 class="card-title">CJordan 1 Retro High Shattered Backboard 3.0</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Lowest ask</h6>
+              <h5 class="card-title">$198</h5>
+              <p class="card-text">2679 sold</p>
+            </div>
           </div>
         </li>
         <li class="pl-4">
-          <div class="card" style="width: 15rem;">
-            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          <div class="card border-0" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx.imgix.net/Nike-Air-Max-98-Olivia-Kim-No-Cover-W.png?fit=fill&bg=FFFFFF&w=300&h=214&auto=format,compress&trim=color&q=90&dpr=2&updated_at=1572367909'>
+            <div class="card-body text-body" style="background-color:#f6f6f6">
+              <h5 class="card-title">CJordan 1 Retro High Shattered Backboard 3.0</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Lowest ask</h6>
+              <h5 class="card-title">$198</h5>
+              <p class="card-text">2679 sold</p>
+            </div>
           </div>
         </li>
         <li class="pl-4">
-          <div class="card" style="width: 15rem;">
-            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          <div class="card border-0" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx.imgix.net/Nike-Air-Max-98-Olivia-Kim-No-Cover-W.png?fit=fill&bg=FFFFFF&w=300&h=214&auto=format,compress&trim=color&q=90&dpr=2&updated_at=1572367909'>
+            <div class="card-body text-body" style="background-color:#f6f6f6">
+              <h5 class="card-title">CJordan 1 Retro High Shattered Backboard 3.0</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Lowest ask</h6>
+              <h5 class="card-title">$198</h5>
+              <p class="card-text">2679 sold</p>
+            </div>
           </div>
         </li>
       </ul>
@@ -204,23 +276,47 @@
     <div class="col-lg-6 ">
       <ul class="list-group list-group-horizontal-md pb-2 pt-3 list-unstyled">
         <li class="pl-4">
-          <div class="card" style="width: 15rem;">
-            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          <div class="card border-0" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx.imgix.net/adidas-Yeezy-Boost-700-Teal-Blue-1-1.jpg?fit=fill&bg=FFFFFF&w=300&h=214&auto=format,compress&trim=color&q=90&dpr=2&updated_at=1571154101'>
+            <div class="card-body text-body" style="background-color:#f6f6f6">
+              <h5 class="card-title">CJordan 1 Retro High Shattered Backboard 3.0</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Lowest ask</h6>
+              <h5 class="card-title">$198</h5>
+              <p class="card-text">2679 sold</p>
+            </div>
           </div>
         </li>
         <li class="pl-4">
-          <div class="card" style="width: 15rem;">
-            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          <div class="card border-0" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx.imgix.net/adidas-Yeezy-Boost-700-Teal-Blue-1-1.jpg?fit=fill&bg=FFFFFF&w=300&h=214&auto=format,compress&trim=color&q=90&dpr=2&updated_at=1571154101'>
+            <div class="card-body text-body" style="background-color:#f6f6f6">
+              <h5 class="card-title">CJordan 1 Retro High Shattered Backboard 3.0</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Lowest ask</h6>
+              <h5 class="card-title">$198</h5>
+              <p class="card-text">2679 sold</p>
+            </div>
           </div>
         </li>
         <li class="pl-4">
-          <div class="card" style="width: 15rem;">
-            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          <div class="card border-0" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx.imgix.net/adidas-Yeezy-Boost-700-Teal-Blue-1-1.jpg?fit=fill&bg=FFFFFF&w=300&h=214&auto=format,compress&trim=color&q=90&dpr=2&updated_at=1571154101'>
+            <div class="card-body text-body" style="background-color:#f6f6f6">
+              <h5 class="card-title">CJordan 1 Retro High Shattered Backboard 3.0</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Lowest ask</h6>
+              <h5 class="card-title">$198</h5>
+              <p class="card-text">2679 sold</p>
+            </div>
           </div>
         </li>
         <li class="pl-4">
-          <div class="card" style="width: 15rem;">
-            <img class="card-img-top" src='https://stockx-assets.imgix.net/png/brand-tiles/000-air-jordan.png?auto=compress,format'>
+          <div class="card border-0" style="width: 15rem;">
+            <img class="card-img-top" src='https://stockx.imgix.net/adidas-Yeezy-Boost-700-Teal-Blue-1-1.jpg?fit=fill&bg=FFFFFF&w=300&h=214&auto=format,compress&trim=color&q=90&dpr=2&updated_at=1571154101'>
+            <div class="card-body text-body" style="background-color:#f6f6f6">
+              <h5 class="card-title">CJordan 1 Retro High Shattered Backboard 3.0</h5>
+              <h6 class="card-subtitle mb-2 text-muted">Lowest ask</h6>
+              <h5 class="card-title">$198</h5>
+              <p class="card-text">2679 sold</p>
+            </div>
           </div>
         </li>
       </ul>
@@ -228,7 +324,6 @@
   </div>
 
   <br></br>
-
 
   <!-- FOOTER -->
   <footer class="page-footer font-small bg-dark text-white">
@@ -245,7 +340,7 @@
           <!-- Links -->
           <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Links</h5>
 
-          <ul class="list-unstyled">
+          <ul class="list-unstyled text-dark">
             <li>
               <a href="#!">Very long link 1</a>
             </li>
